# stocklens

.claude/: launch.json
backend/: .env.example  dev.db  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
backend/app/: main.py
backend/app/api/: chat.py  forex.py  news.py  signals.py  stocks.py  websocket.py
backend/app/core/: config.py  universe.py
backend/app/models/: db.py
backend/app/schemas/: news.py  signal.py  stock.py
backend/app/services/: ai_chat.py  data_pipeline.py  forex_fetcher.py  news_fetcher.py  price_fetcher.py  scheduler.py
backend/app/services/nlp/: cross_market.py  lang_processor.py  llm_explainer.py  pipeline.py  rule_engine.py  sentiment.py  ticker_mapper.py
backend/app/utils/: database.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  mock.ts
frontend/src/components/chat/: ChatMessage.tsx  ChatWidget.tsx
frontend/src/components/common/: MiniBarChart.tsx  SentimentBadge.tsx  SignalBadge.tsx  ToastProvider.tsx
frontend/src/components/dashboard/: CrossMarketPanel.tsx  IndexBar.tsx  SectorHeatmap.tsx  StockCard.tsx  TopMovers.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/context/: MarketContext.tsx  PortfolioContext.tsx  WatchlistContext.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: CrossMarket.tsx  Dashboard.tsx  GeoRisk.tsx  News.tsx  Portfolio.tsx  StockDetail.tsx  Watchlist.tsx
frontend/src/types/: index.ts  react-simple-maps.d.ts
(+6 files in other folders)
