[project]
name = "investment-app-backend"
version = "0.1.0"
description = "AI Investment Monitoring App — India + USA"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "yfinance>=0.2.40",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.0",
    "feedparser>=6.0.11",
    "deep-translator>=1.11.4",
    "langdetect>=1.0.9",
    "websockets>=12.0",
    "aiosqlite>=0.20.0",
    "groq>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
